tests/netconvert/import/XML/errors/broken_edge/edge#id__invalid4/errors.netconvert
Error: Invalid edge id '4 5'.
Quitting (on error).
